# model-counting-comp-2022

./: README.md  mc2022_track1_counts.sh  mc2022_track2_counts.sh  mc2022_track3_counts.sh
solvers/track1_solvers/TwG/: starexec_description.txt
solvers/track1_solvers/gpmc/gpmc/preprocessor/: Instance.cc
solvers/track1_solvers/gpmc/gpmc/utils/: System.cc
solvers/track1_solvers/gpmc_r2/: README.md
solvers/track1_solvers/gpmc_r2/gpmc-mcc2022-0715/: starexec_build
solvers/track1_solvers/gpmc_r2/gpmc-mcc2022-0715/gpmc/: clean.sh
solvers/track1_solvers/gpmc_r2/gpmc/core/: Counter.cc
solvers/track1_solvers/gpmc_r2/gpmc/preprocessor/: IFlowCutter.h  TestSolver.cc  TreeDecomposition.cc
solvers/track1_solvers/gpmc_r2/gpmc/utils/: Options.cc
solvers/track2_solvers/SharpSAT-TD-weighted/src/preprocessor/: instance.cpp
solvers/track2_solvers/gpmc/gpmc/: LICENSE.md
solvers/track2_solvers/gpmc/gpmc/core/: Component.h  Dimacs.h  Solver.cc
solvers/track2_solvers/gpmc/gpmc/mtl/: template.mk
solvers/track3_solvers/dpmcpre/: README.md
solvers/track3_solvers/gpmc/: INSTALL.md
solvers/track3_solvers/gpmc/gpmc/: build.sh
solvers/track3_solvers/gpmc/gpmc/core/: ComponentCache.cc  Counter.h  SolverTypes.h
solvers/track4_solvers/gpmc/gpmc/: CMakeLists.txt
solvers/track4_solvers/gpmc/gpmc/core/: Main.cc
solvers/track4_solvers/gpmc/gpmc/preprocessor/: Instance.h  Preprocessor.cc
solvers/track4_solvers/gpmc/gpmc/preprocessor/lib_sharpsat_td/: subsumer.hpp
solvers/track4_solvers/gpmc/gpmc/utils/: ParseUtils.h
(+14 files in other folders)
